# voicebridge

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  QUICK_REFERENCE.md  QUICK_START_VIRTUAL_AUDIO.md  README.md  VOICEBRIDGE_ARCHITECTURE.md  package-lock.json  package.json  pyproject.toml  vitest.config.js  voicebridge.sh
docs/: SETUP.md  VIRTUAL_AUDIO_SETUP.md  WINDOWS_SETUP.md
docs/plans/: 2026-02-15-cli-speaker-mvp.md  2026-02-15-pcm-player.md  2026-02-15-web-interface-design.md  2026-02-15-web-interface-implementation.md
scripts/: list_audio_devices.py
src/voicebridge/: __init__.py  __main__.py  cli.py
src/voicebridge/audio/: capture.py  local_output.py  output.py  vad.py
src/voicebridge/config/: settings.py
src/voicebridge/core/: exceptions.py  models.py  pipeline.py  protocols.py
src/voicebridge/services/stt/: deepgram_client.py
src/voicebridge/services/translation/: openai_client.py
src/voicebridge/services/tts/: elevenlabs_client.py
src/voicebridge/utils/: cli_output.py  profiles.py  transcript_logger.py
src/voicebridge/web/: __init__.py  app.py  audio_bridge.py  web_pipeline.py  websocket_handler.py
src/voicebridge/web/static/: index.html
src/voicebridge/web/static/css/: styles.css
src/voicebridge/web/static/js/: audio.js  config.js  pcm_player.js  visualizer.js  websocket.js
tests/: conftest.py
tests/unit/: test_audio_capture.py  test_audio_output.py  test_cli.py  test_config.py  test_exceptions.py  test_local_output.py  test_models.py  test_pipeline.py  test_stt_client.py  test_translation_client.py  test_tts_client.py  test_vad.py
tests/web/: __init__.py  pcm_player.test.js  test_app.py  test_audio_bridge.py  test_websocket_endpoint.py  test_websocket_handler.py  websocket_audio.test.js
