[project]
name = "voicebridge"
version = "1.0.0"
description = "Real-time Spanish-to-English voice interpreter for Microsoft Teams"
requires-python = ">=3.11"
authors = [
    {name = "VoiceBridge Team"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Audio processing
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "soxr>=0.3",

    # Async and networking
    "websockets>=12.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "uvloop>=0.19; sys_platform != 'win32'",

    # AI/ML services
    "openai>=1.12",

    # Audio ML
    "torch>=2.0",
    "torchaudio>=2.0",
    "onnxruntime>=1.16",

    # Configuration and validation
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "pytest-benchmark>=4.0",
    "psutil>=5.9",
]

ui = [
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.scripts]
voicebridge = "voicebridge.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",  # Don't require type annotations in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "soxr.*",
    "torch.*",
    "torchaudio.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require API keys)",
    "performance: Performance benchmarks",
    "slow: Tests that take > 10 seconds",
]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/voicebridge"]
omit = [
    "tests/*",
    "*/ui/*",  # UI is optional
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
